@@ -204,6 +204,7 @@ CVS			+ Added configuration manager  (Matteo, 2001/11/04)
 			  - 2002-03-30:  Added source to Flash ClickTAG  (Niels)
 			  - 2002-03-30:  Path detection during install on IIS fixed  (Niels)
 			  - 2002-03-30:  Fixed MS Exchange problem when sending email  (Niels)
+			  - 2002-03-31:  Duplicated zones now have an unique name  (Niels)
 			 
 
 
